--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "prepare": "husky"
+    "prepare": "husky",
+    "prepublishOnly": "npm run build && npm run test",
+    "semantic-release": "semantic-release"
   },
   "keywords": [
     "mcp",
@@ -44,8 +46,12 @@
     "solidjs",
     "remix"
   ],
-  "author": "",
+  "author": "Logan Renz",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/loganrenz/nardocs.git"
@@ -64,6 +70,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^8.49.0",
     "@typescript-eslint/parser": "^8.49.0",
@@ -74,6 +82,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
+    "semantic-release": "^24.0.0",
     "typescript": "^5.3.0",
     "typescript-eslint": "^8.49.0",
     "vitest": "^4.0.15"
