feat: configure npm provenance for secure automated publishing
- Enable NPM_CONFIG_PROVENANCE for cryptographic attestation
- Add registry-url to Node.js setup for trusted publishing
- Update semantic-release npm plugin configuration
- Add comprehensive NPM_SETUP.md guide with token instructions
- Configure workflow to use NODE_AUTH_TOKEN for authentication

This enables supply chain security with provenance attestation.

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -24,7 +24,8 @@
       "@semantic-release/npm",
       {
         "npmPublish": true,
-        "tarballDir": "dist"
+        "tarballDir": "dist",
+        "pkgRoot": "."
       }
     ],
     [
@@ -42,4 +43,5 @@
     ]
   ]
 }
+
 
