--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,14 @@ yarn-error.log*
 .DS_Store
 Thumbs.db
 
-# Environment files
+# Environment files (use Doppler instead)
 .env
 .env.local
 .env.*.local
+.env.production
+
+# Doppler local override (personal configs only)
+# .doppler.yaml is committed for team defaults
 
 # IDE
 .idea/
