--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -61,6 +62,16 @@ jobs:
           echo "Verifying main entry point:"
           test -f build/index.js && echo "✓ build/index.js exists" || exit 1
 
+      - name: Verify Doppler secrets
+        env:
+          DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN }}
+        run: |
+          echo "Verifying Doppler connection..."
+          doppler secrets --only-names
+          echo "NPM_TOKEN length: $(doppler run -- printenv NPM_TOKEN | wc -c) chars"
+          echo "Testing npm auth..."
+          doppler run -- sh -c 'curl -s -H "Authorization: Bearer $NPM_TOKEN" https://registry.npmjs.org/-/whoami'
+
       - name: Release
         env:
           DOPPLER_TOKEN: ${{ secrets.DOPPLER_TOKEN }}
@@ -78,5 +89,3 @@ jobs:
         with:
           name: coverage
           path: coverage/
-
-
