--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.24.0",
+    "@modelcontextprotocol/sdk": "~1.24.0",
     "cheerio": "^1.0.0",
     "node-fetch": "^3.3.0"
   },
